--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.1.0",
   "dependencies": {
+    "@types/react-helmet": "^6.1.0",
     "@types/styled-components": "^5.1.4",
     "gatsby": "^2.25.3",
     "gatsby-image": "^2.4.21",
