downgrade python version
t

test

test

Revert "test"

This reverts commit c377b17835dbe944d615a793b340f70ddb5aa4b2.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-16.04
+
     steps:
     - name: checkout
       uses: actions/checkout@main
