--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "private": true,
   "version": "0.1.0",
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@types/react-helmet": "^6.1.0",
-    "@types/styled-components": "^5.1.4",
-    "gatsby": "^2.25.3",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-manifest": "^2.5.2",
-    "gatsby-plugin-offline": "^3.3.2",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sass": "^2.4.2",
-    "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-plugin-styled-components": "^3.6.0",
+    "gatsby": "^3.0.0-next.0",
+    "gatsby-plugin-emotion": "^6.2.0",
+    "gatsby-plugin-image": "1.0.0",
+    "gatsby-plugin-manifest": "^3.2.0",
+    "gatsby-plugin-offline": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^4.2.0",
+    "gatsby-plugin-sass": "^4.2.0",
+    "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-plugin-transition-link": "^1.20.5",
-    "gatsby-source-filesystem": "^2.4.2",
-    "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.2.0",
     "gsap": "^3.5.1",
-    "node-sass": "4.14.1",
+    "node-sass": "5.0.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.13.7",
+    "query-string": "^7.0.0",
     "radium": "^0.26.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "eslint-config-airbnb-typescript": "^11.0.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
